# Discord_dither_bot

./: .gitignore  Cargo.toml
src/: custom_rejections.rs  discord_structs.rs  dither.rs  main.rs
