[package]
name = "rusty_bot"
version = "0.1.0"
authors = ["Austin Zerk"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
dotenv = "0.15.0"
ed25519 = "2.2.3"
bytes = "1.5.0"
ed25519-dalek = "2.1.0"
hex = "0.4.3"
serde_json = "1.0.111"
reqwest = { version = "0.11.23", features = ["json","multipart"] }
image = "0.24.8"
